css/style.css
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;

}
body {
    width: 100%;
    height: 100%;
    background-image: url("../images/beijinglandscape.jpg");
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
}

#jumbocontainer {
    margin-top: 2.5%;
    margin-bottom: 2.5%;
    margin-right: 3%;
    margin-left: 3%;
    
}

#contentsection {
    padding: 2rem 1rem;
  margin-bottom: 2rem;
  background-color: #e9ecef;
  border-radius: 0.3rem;
}

nav {
    width: 100%;
    position:fixed;
    display:flex;
    justify-content: space-around;
    align-items: center;
    min-height: 8vh;
    background-color: rgb(36, 32, 32);
    
}
.navposition {
    width: 100%;
    position: relative;
    display:flex;
    justify-content: space-around;
    align-items: center;
    min-height: 8vh;
    background-color: rgb(36, 32, 32);
}

.logo {
    color: white;
    text-transform: uppercase;
    letter-spacing: 5px;
    font-size: 20px;
    font-family: 'Work Sans', sans-serif;

    
}

.nav-links {
    display:flex;
    width: 40%;
    list-style-type: none;
    color: black;

}

.nav-links a {
    padding: 10px;
    margin: 8px;
    font-size: 20px;
    text-decoration: none;
    letter-spacing: 3px;
    font-family: 'Work Sans', sans-serif;

}

.whitetext {
    color: rgb(236, 235, 235);
}

.activesite {
    background: #ddd;
   color: black;
}

.nav-links a:hover {
    background: #ddd;
    color: black;
}

.burger {
    display:none;
    cursor: pointer;
}
.burger div {
    width: 25px;
    height: 3px;
    background-color: seashell;
    margin: 5px;
}

@media screen and (max-width:1024px) {
    .nav-links {
        width: 60%;
    }
}
@media screen and (max-width:768px) {
    body {
        overflow-x: hidden;
    }
    .nav-links {
        position: absolute;
        right:0px;
        height: 92vh;
        top: 8vh;
        background-color: rgb(36, 32, 32);
        display: flex;
        transform: translateX(100%);
        flex-direction: column;
        align-items: center;
        width: 50%;
        list-style-type: none;
        align-items: center;
        /*transition: transform 0.5s ease-in;*/

    }
    .nav-links li {
        opacity: 0;
        margin-top: 15vh;
        padding: 0;
        list-style-type: none;
    }
    .burger {
        display:block;
    }
}
.nav-active {
    transform:translateX(0%);
}

@keyframes navLinkFade {
    from {
        opacity:0;
        transform: translateX(50px);
    }
    to {
        opacity: 1;
        transform: translateX(0px);
    }
}

/*.yo {
    margin-top: 8vh;
}*/

.imagealignment {
    display: inline-block;
    margin-right: 5%;
    margin-left: 5%;
    float: left;
    width: 40%;
    height: 50%;
}

.paragraphalignment {
    display: inline-block;
    font-size: 14px;
    text-align: left;
}

.projecttextalignment {
    display: inline-block;
    text-align: left;
    font-size: 20px;
    float: left;
    margin-right: 8%;
    margin-left: 5%;
}

.projectimage {
    display: inline-block;
    border-style: outset;
    border-color:#14335b;
    border-width: 4px;
    padding: 0px;
}

.indent {
    text-indent: 45px;
}

